--- a/mern-workshop/client/src/App.css
+++ b/mern-workshop/client/src/App.css
@@ -24,6 +24,16 @@
   color: white;
 }
 
+.container-card {
+  text-align: start;
+  height: auto;
+}
+
+.container-card h6{
+  margin-top: 5px;
+}
+
+
 .App-link {
   color: #61dafb;
 }
